# reed-solomon-benchmark

./: Cargo.toml  README.md  decode_results.txt
benches/: decode.rs  encode.rs  verify.rs
benches/common/: mod.rs
src/: main.rs
